WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282613
Fix debug crash in Notification::create
https://bugs.webkit.org/show_bug.cgi?id=282613
Summary
Fix debug crash in Notification::create
Ben Nham
Reported
2024-11-05 09:29:18 PST
Notification::create calls JSONParse without holding a JSLock when we fire notification events for service workers, leading to a debug assert.
Attachments
Add attachment
proposed patch, testcase, etc.
Ben Nham
Comment 1
2024-11-05 09:29:19 PST
<
rdar://problem/139244059
>
Ben Nham
Comment 2
2024-11-05 09:31:16 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36191
Alexey Proskuryakov
Comment 3
2024-11-05 15:40:18 PST
***
Bug 282574
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2024-11-05 17:04:05 PST
Committed
286196@main
(4fc9a4b92e15): <
https://commits.webkit.org/286196@main
> Reviewed commits have been landed. Closing PR #36191 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug