Cherry-pick 286196@main (4fc9a4b92e15). https://bugs.webkit.org/show_bug.cgi?id=282613

Fix debug crash in Notification::create
    https://bugs.webkit.org/show_bug.cgi?id=282613
    rdar://139244059

    Reviewed by Chris Dumez.

    Notification::create calls JSONParse without holding a JSLock when we fire notification events for
    service workers, leading to a debug assert.

    * Source/WebCore/Modules/notifications/Notification.cpp:
    (WebCore::Notification::create):

    Canonical link: https://commits.webkit.org/286196@main

Canonical link: https://commits.webkit.org/282416.275@webkitglib/2.46